# fitgirl-index

./: .gitignore  Cargo.toml  astro.config.mjs  astro.config.ts  bun.lockb  fitgirl.db  fitgirl.db-shm  fitgirl.db-wal  netlify.toml  package.json  pnpm-lock.yaml  tailwind-watch.sh  tailwind.config.js  tailwind.config.ts  tailwind.css  test.html  tsconfig.json
.zed/: settings.json
assets/: style.css
db/: config.ts  fitgirl.db-shm  fitgirl.db-wal
netlify/functions/hello-world/: Cargo.toml
netlify/functions/server/: Cargo.toml
netlify/functions/server/src/: main.rs
netlify/functions/server/src/assets/: style.css
public/: site.webmanifest
src/: cache-tags.ts  env.d.ts  index.ts  main.rs
src/actions/: index.ts
src/components/: ReleaseList.astro  fullscreen_screenshot.rs  generic_error.rs  home_page.rs  layout.rs  mod.rs  release_card.rs  release_list.rs  release_page.rs
src/db/: genres.rs  last_releases.rs  mod.rs  release.rs  search.rs
src/layouts/: Layout.astro  Searchable.astro
src/pages/: index.astro  list-fragment.astro
src/pages/db/: _genreAliases.ts  _list.ts  _sync.ts  list.ts  sync-all.ts  sync-rss.ts  sync.ts
src/pages/release/: [slug].astro
src/services/: htmx_boosting.rs  mod.rs  sync_fitgirl_rss.rs
