[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0.7.3"
axum = { version = "0.6.18", features = ["form", "macros"] }
axum-aws-lambda = "0.5.0"
axum-extra = { version = "0.7.5", features = ["query"] }
chrono = "0.4.26"
hyper = { version = "0.14.27", features = ["full"] }
lambda_http = "0.8.1"
lambda_runtime = "0.7.3"
maud = { version = "0.25.0", features = ["axum"] }
rusqlite = { version = "0.29.0", features = ["chrono"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_html_form = "0.2.2"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.2", features = ["fs"] }
tower-livereload = "0.8.0"
uuid = { version = "1.4.1", features = ["serde"] }
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
