[package]
name = "fitgirl-index"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["form", "macros"] }
axum-extra = { version = "0.7.5", features = ["query"] }
chrono = "0.4.26"
hyper = { version = "0.14.27", features = ["full"] }
maud = { version = "0.25.0", features = ["axum"] }
rusqlite = { version = "0.29.0", features = ["chrono"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_html_form = "0.2.2"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.2", features = ["fs"] }
tower-livereload = "0.8.0"
uuid = { version = "1.4.1", features = ["serde"] }
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
shuttle-static-folder = "0.21.0"
tracing = "0.1.37"
reqwest = "0.11.18"
rss = "2.0.5"
scraper = "0.17.1"
derive_builder = "0.12.0"
